@@ -1,5 +1,16 @@
 2012-03-30  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
+	* matlab/ItkToolbox/CMakeLists.txt (v0.4.4):
+	* Add
+	matlab/ItkToolbox/MexMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.hpp (v0.1.0):
+	* Add
+	matlab/ItkToolbox/MexMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.cpp (v0.1.0):
+	* matlab/itk_imfilter.m (v0.4.7):
+	* matlab/ItkToolbox/ItkImFilter.cpp (v0.6.6):
+
+	- Add filter
+	itk::MultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.
+
 	* matlab/ItkToolbox/add_filter_template.sh (v0.1.2):
 
 	- Fix bug. Rev and Date seach patterns in sed expression were too
